--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -68,6 +68,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: List files in the repository
+      working-directory: terraform
+      run: |
+        ls ${{ github.workspace }}
+        
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
