--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,7 +69,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: List files in the repository
-      working-directory: terraform
+      working-directory: ./terraform
       run: |
         ls ${{ github.workspace }}
         
