--- a/.github/workflows/onPush.yml
+++ b/.github/workflows/onPush.yml
@@ -8,5 +8,6 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
       - name: List files in the repository
+        working-directory: ./terraform
         run: |
           ls ${{ github.workspace }}
