--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,9 +69,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: List files in the repository
-      working-directory: ./terraform
+      working-directory: terraform
       run: |
-        ls ${{ github.workspace }}
+        ls
         
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
